# mdb

./: .gitignore  README.md  docker-compose.yml  el_connector.sh  notes.txt  pyproject.toml
connector_configs/: connector_elasticsearch-sink-controversial-posts_config.properties  connector_elasticsearch-sink-hot-posts_config.properties  connector_elasticsearch-sink-rising-posts_config.properties  connector_elasticsearch-sink_config.properties  el_connector.sh  mongo_db_source.properties
mdb/: kafka_c.py  kafka_p.py  reddit.py
mdb_reddit/: db_writer.py  fetcher.py  kafka_c.py  kafka_p.py  monogdb_connector_source.py  reddit.py  reddit_test.py  telegram_bot.py  test.py  util.py
redis/: docker-compose.yml  redis.conf
