[tool.poetry]
name = "mdb_reddit"
version = "0.1.0"
description = ""
authors = ["DomincWrege <dominic.wrege001@stud.fh-dortmund.de>"]

[tool.poetry.dependencies]
python = "^3.6"
praw = "^7.0.0"
kafka-python = "^2.0.1"
pymongo = "^3.10.1"
pprint = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"

[tool.poetry.scripts]
consumer = "mdb_reddit.kafka_c:main"
producer = "mdb_reddit.kafka_p:main"
reddit = "mdb_reddit.reddit:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

